block out to reviews section

--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,9 @@
     --color-go-purple-1: #9747FF;
     --color-go-green-1: #33FF85;
     --color-go-pink-1: #FF3366;
+    --color-go-gray-1: #CCC;
+    --color-go-gray-2: #B4B4B4;
+    --color-go-white-2: #F5F5F5;
 }
 
 
