progress on landing page

--- a/src/main.css
+++ b/src/main.css
@@ -16,6 +16,7 @@
     --color-go-pink-1: #FF3366;
     --color-go-gray-1: #CCC;
     --color-go-gray-2: #B4B4B4;
+    --color-go-gray-3: #6F7176;
     --color-go-white-2: #F5F5F5;
 }
 
