--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import "tailwindcss";
 
 @theme {
     --font-display: "Montserrat", "sans-serif";
+    --font-scp: "Source Code Pro";
+    --breakpoint-1366: 1366px;
+    --breakpoint-1166: 1166px;
+    --breakpoint-926: 926px;
     --color-black: #010101;
     --color-go-cyan-1: #07DDDA;
     --color-go-cyan-2: #33FFF3;
