--- a/src/main.css
+++ b/src/main.css
@@ -35,8 +35,9 @@
     background-color: #33FFF3;
     width: 1366px;
     height: 768px;
-    padding: 337px 5rem 199px;
+    padding: 337px 0rem 199px;
     transform: translate(-50%, -50%);
+    
     /* animation: moveUpOut 1.5s linear forwards;
     animation-delay: 2s; 
     display: none; */
@@ -50,6 +51,13 @@
     100% {
         transform: translate(-50%, -165%);
         display: none;
+    }
+}
+
+@media only screen and (max-width: 1385px) {
+    #anim {
+        width: 100%;
+        height: 90%;
     }
 }
 
