contact page progress

--- a/src/main.css
+++ b/src/main.css
@@ -24,6 +24,8 @@
     --color-go-gray-1: #CCC;
     --color-go-gray-2: #B4B4B4;
     --color-go-gray-3: #6F7176;
+    --color-go-gray-4: #0E1015;
+    --color-go-gray-5: #1B1D24;
     --color-go-white-2: #F5F5F5;
     --color-go-white-3: #FFFBFC;
 }
