--- a/src/main.css
+++ b/src/main.css
@@ -26,6 +26,7 @@
     --color-go-gray-3: #6F7176;
     --color-go-gray-4: #0E1015;
     --color-go-gray-5: #1B1D24;
+    --color-go-gray-6: #999D9F;
     --color-go-white-2: #F5F5F5;
     --color-go-white-3: #FFFBFC;
 }
